--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ cache:
 - $HOME/.m2
 jdk:
 - oraclejdk8
+services:
+- docker
 script:
+- docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 - mvn clean package
+- docker push r0623646/dacontinuousdeployment:latest
