--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ services:
 script:
 - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 - mvn clean package
+- docker build -t r0623646/dacontinuousdeployment:latest
 - docker push r0623646/dacontinuousdeployment:latest
