--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ services:
 - docker
 script:
 - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-- mvn clean package
+- mvn clean package docker:build
 - docker push r0623646/dacontinuousdeployment:latest
